extends Node3D


@onready var top = $top_part
@onready var mid = $mid_part
@onready var bot = $bot_part
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
